--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 ### apache ######
 
-APACHE_HOST_HTTP_PORT=80
-APACHE_HOST_HTTPS_PORT=443
+APACHE_HOST_HTTP_PORT=8080
+APACHE_HOST_HTTPS_PORT=4433
 APACHE_HOST_LOG_PATH=./log/apache
 APACHE_CONF_PATH=./conf/apache
-APACHE_WWW_PATH=./www
+APACHE_WWW_PATH=./www/f3cms
 
 
 ### php ######
@@ -15,7 +15,7 @@ PHP_CONF_PATH=./conf/php
 
 ### mysql ######
 
-MYSQL_PORT=3306
+MYSQL_PORT=3366
 MYSQL_LOG_PATH=./log/mysql
 MYSQL_ROOT_PASSWORD=sPes4uBrEcHUq5qE
 MYSQL_DATABASE=db_name
