--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,47 @@
 version: '3'
 services:
-    apache:
-        build: .
+    web-server:
+        image: nginx:alpine
+        restart: always
+        container_name: nginx
+        depends_on:
+            - mysql
+            - php-fpm
+        volumes:
+            - ${APACHE_WWW_PATH}:/var/www/html
+            - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./log/nginx/:/var/log/nginx/
+            - ./conf/nginx/sites/default.conf:/etc/nginx/conf.d/default.conf
+            - run_vol:/var/run
         ports:
             - "${APACHE_HOST_HTTP_PORT}:80"
             - "${APACHE_HOST_HTTPS_PORT}:443"
-        depends_on:
-            - mysql
+
+    php-fpm:
+        image: dmiseev/php-fpm7.2
+        restart: always
+        container_name: php-fpm
         volumes:
             - ${APACHE_WWW_PATH}:/var/www/html
-            - ${APACHE_HOST_LOG_PATH}:/var/log/apache2
-            - ${APACHE_CONF_PATH}:/etc/apache2/custom-conf
-            - ${PHP_CONF_PATH}:/usr/local/etc/php/conf.d
+            - ./conf/php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/php-ini-overrides.ini
+            - ./conf/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+        working_dir: /var/www/html
+
+    # apache:
+    #     build: .
+    #     ports:
+    #         - "${APACHE_HOST_HTTP_PORT}:80"
+    #         - "${APACHE_HOST_HTTPS_PORT}:443"
+    #     depends_on:
+    #         - mysql
+    #     volumes:
+    #         - ${APACHE_WWW_PATH}:/var/www/html
+    #         - ${APACHE_HOST_LOG_PATH}:/var/log/apache2
+    #         - ${APACHE_CONF_PATH}:/etc/apache2/custom-conf
+    #         - ${PHP_CONF_PATH}:/usr/local/etc/php/conf.d
 
     mysql:
-        image: mysql:5.6
+        image: mysql:8.0
 
         ports:
             - "${MYSQL_PORT}:3306"
@@ -29,3 +56,10 @@ services:
             - MYSQL_USER=${MYSQL_USER}
             - MYSQL_PASSWORD=${MYSQL_PASSWORD}
             - TZ=Asia/Taipei
+    redis:
+        image: redis:latest
+volumes:
+  run_vol:
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
