--- a/.env
+++ b/.env
@@ -18,8 +18,8 @@ PHP_CONF_PATH=./conf/php
 MYSQL_PORT=3366
 MYSQL_LOG_PATH=./log/mysql
 MYSQL_ROOT_PASSWORD=sPes4uBrEcHUq5qE
-MYSQL_DATABASE=db_name
+MYSQL_DATABASE=target_db
 MYSQL_USER=root
 MYSQL_PASSWORD=sPes4uBrEcHUq5qE
-MYSQL_CONF_PATH=./conf/mysql/my.cnf
+MYSQL_CONF_PATH=./conf/mysql/
 MYSQL_DATA_PATH=./database
