--- a/conf/nginx/sites/default.conf
+++ b/conf/nginx/sites/default.conf
@@ -53,7 +53,7 @@ server {
 
     # PHP
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files $uri $uri/ /index.php?$query_string;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php;
         fastcgi_index index.php;
@@ -71,8 +71,8 @@ server {
 
     # Feed cache
     location ~* \.(?:rss|atom)$ {
-    expires 1h;
-    add_header Cache-Control "public";
+        expires 1h;
+        add_header Cache-Control "public";
     }
 
     # Media files cache
