--- a/conf/php/php-ini-overrides.ini
+++ b/conf/php/php-ini-overrides.ini
@@ -2,3 +2,9 @@ upload_max_filesize = 10M
 post_max_size = 10M
 
 display_errors = Off
+
+track_errors = Off
+
+date.timezone = "Asia/Taipei"
+
+mysql.default_socket = "/var/lib/mysql/mysql.sock"
