use f3cms.lo domain

--- a/conf/nginx/sites/default.conf
+++ b/conf/nginx/sites/default.conf
@@ -9,7 +9,7 @@ upstream php {
 
 server {
     listen       80 default;
-    server_name  localhost;
+    server_name  f3cms.lo;
 
     client_max_body_size 10M;
 
