--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ APACHE_HOST_HTTPS_PORT=4433
 APACHE_HOST_LOG_PATH=./log/apache
 APACHE_CONF_PATH=./conf/apache
 APACHE_WWW_PATH=./www/f3cms
+APACHE_PMA_PATH=./www/pma
 
 
 ### php ######
