--- a/conf/nginx/sites/default.conf
+++ b/conf/nginx/sites/default.conf
@@ -37,6 +37,11 @@ server {
         set $skip_cache 1;
     }
 
+    location /backend {
+        index  index.html;
+        try_files $uri $uri/ /backend/index.html?$query_string;
+    }
+
     location / {
             try_files $uri $uri/ /index.php?q=$uri&$args;
     }
