new php,  local ssl

--- a/conf/nginx/sites/default.conf
+++ b/conf/nginx/sites/default.conf
@@ -101,4 +101,10 @@ server {
         log_not_found off;
     }
 
+    listen 443 ssl;
+    ssl_certificate /etc/nginx/letsencrypt/loc.shopartner.co+9.pem;
+    ssl_certificate_key /etc/nginx/letsencrypt/loc.shopartner.co+9-key.pem;
+    include /etc/nginx/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/nginx/letsencrypt/ssl-dhparams.pem;
+
 }
