--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,16 @@ services:
     web-server:
         image: nginx:alpine
         restart: always
-        container_name: nginx
+        container_name: nginx_fc
         depends_on:
             - mariadb
             - php-fpm
         volumes:
             - ${APACHE_WWW_PATH}:/var/www/html
             - ${APACHE_PMA_PATH}:/var/www/html/pma
-            - ./www/vendor/:/var/www/vendor/
+            - ./www/vendor/:/var/www/html/vendor/
             - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./conf/nginx/letsencrypt:/etc/nginx/letsencrypt
             - ./log/nginx/:/var/log/nginx/
             - ./conf/nginx/sites/default.conf:/etc/nginx/conf.d/default.conf
             - run_vol:/var/run
@@ -23,9 +24,10 @@ services:
         #     - default
 
     php-fpm:
-        image: andygott/php-fpm-alpine-imagick
+        build: .
+        image: php_fc:191028
         restart: always
-        container_name: php-fpm
+        container_name: php-fpm_fc
         depends_on:
             - mariadb
         links:
@@ -34,7 +36,7 @@ services:
             - ${APACHE_WWW_PATH}:/var/www/html
             - ${APACHE_PMA_PATH}:/var/www/html/pma
             - ${MYSQL_DATA_PATH}:/var/lib/mysql
-            - ./www/vendor/:/var/www/vendor/
+            - ./www/vendor/:/var/www/html/vendor/
             - ./conf/php/php-ini-overrides.ini:/etc/php/7.2/fpm/conf.d/php-ini-overrides.ini
             - ./conf/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
         working_dir: /var/www/html
@@ -54,7 +56,7 @@ services:
 
     mariadb:
         image: mariadb:10
-        container_name: mariadb
+        container_name: mariadb_fc
         restart: always
         ports:
             - "${MYSQL_PORT}:3306"
@@ -75,7 +77,7 @@ services:
             - TZ=Asia/Taipei
     redis:
         image: redis:latest
-        container_name: redis
+        container_name: redis_fc
 volumes:
     run_vol:
         driver_opts:
