use composer in docker

--- a/conf/nginx/sites/default.conf
+++ b/conf/nginx/sites/default.conf
@@ -102,9 +102,37 @@ server {
     }
 
     listen 443 ssl;
-    ssl_certificate /etc/nginx/letsencrypt/loc.shopartner.co+9.pem;
-    ssl_certificate_key /etc/nginx/letsencrypt/loc.shopartner.co+9-key.pem;
+    ssl_certificate /etc/nginx/letsencrypt/f3cms.lo+1.pem;
+    ssl_certificate_key /etc/nginx/letsencrypt/f3cms.lo+1-key.pem;
     include /etc/nginx/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/nginx/letsencrypt/ssl-dhparams.pem;
 
+}
+
+
+server {
+    listen       80 ;
+    server_name  my.f3cms.lo;
+    root   /var/www/pma;
+
+    location / {
+        index index.php index.html index.htm;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+
+        fastcgi_pass php;
+        fastcgi_cache_valid  60m;
+
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param YOTTA_ENV development; # production;
+    }
+
+    listen 443 ssl;
+    ssl_certificate /etc/nginx/letsencrypt/f3cms.lo+1.pem;
+    ssl_certificate_key /etc/nginx/letsencrypt/f3cms.lo+1-key.pem;
+    include /etc/nginx/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/nginx/letsencrypt/ssl-dhparams.pem;
 }
