--- a/conf/nginx/letsencrypt/options-ssl-nginx.conf
+++ b/conf/nginx/letsencrypt/options-ssl-nginx.conf
@@ -19,5 +19,5 @@ add_header Strict-Transport-Security max-age=15768000;
 
 # OCSP Stapling ---
 # fetch OCSP records from URL in ssl_certificate and cache them
-ssl_stapling on;
-ssl_stapling_verify on;
+ssl_stapling off;
+ssl_stapling_verify off;
