change to loc.f3cms.com

--- a/conf/nginx/sites/default.conf
+++ b/conf/nginx/sites/default.conf
@@ -9,11 +9,13 @@ upstream php {
 
 server {
     listen       80 default;
-    server_name  f3cms.lo;
+    server_name  loc.f3cms.com;
+
+    charset utf-8;
 
     client_max_body_size 10M;
 
-    root   /var/www/html;
+    root   /var/www/f3cms;
     index  index.php index.html index.htm;
 
     set $skip_cache 0;
@@ -28,19 +30,33 @@ server {
     }
 
     # Don't cache URIs containing the following segments
-    if ($request_uri ~* "/backend/|/feed/|index.php|sitemap(_index)?.xml") {
-        set $skip_cache 1;
-    }
+    # if ($request_uri ~* "/backend/|/feed/|index.php|sitemap(_index)?.xml") {
+    #     set $skip_cache 1;
+    # }
 
     # Don't use the cache for logged-in users or recent commenters
     if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in") {
         set $skip_cache 1;
     }
 
-    location /backend {
+    location ~ ^/backend/?(.*)$ {
+        access_log off;
+
+        expires 1M;
         index  index.html;
         try_files $uri $uri/ /backend/index.html?$query_string;
     }
+
+    location ~ ^/assets/?(.*)$ {
+        # alias /var/www/assets/$1;
+        access_log off;
+        expires 1M;
+    }
+
+    add_header Access-Control-Allow-Origin $http_origin;
+    add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+    add_header Access-Control-Allow-Headers 'x-requested-token,DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type, Content-Range, Content-Disposition,Authorization';
+    add_header Access-Control-Allow-Credentials true;
 
     location / {
             try_files $uri $uri/ /index.php?q=$uri&$args;
@@ -71,6 +87,7 @@ server {
 
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param APP_ENV develop; # production;
 
     }
 
@@ -102,37 +119,9 @@ server {
     }
 
     listen 443 ssl;
-    ssl_certificate /etc/nginx/letsencrypt/f3cms.lo+1.pem;
-    ssl_certificate_key /etc/nginx/letsencrypt/f3cms.lo+1-key.pem;
+    ssl_certificate /etc/nginx/letsencrypt/loc.f3cms.com+1.pem;
+    ssl_certificate_key /etc/nginx/letsencrypt/loc.f3cms.com+1-key.pem;
     include /etc/nginx/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/nginx/letsencrypt/ssl-dhparams.pem;
 
-}
-
-
-server {
-    listen       80 ;
-    server_name  my.f3cms.lo;
-    root   /var/www/pma;
-
-    location / {
-        index index.php index.html index.htm;
-    }
-
-    location ~ \.php$ {
-        include fastcgi_params;
-
-        fastcgi_pass php;
-        fastcgi_cache_valid  60m;
-
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param YOTTA_ENV development; # production;
-    }
-
-    listen 443 ssl;
-    ssl_certificate /etc/nginx/letsencrypt/f3cms.lo+1.pem;
-    ssl_certificate_key /etc/nginx/letsencrypt/f3cms.lo+1-key.pem;
-    include /etc/nginx/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/nginx/letsencrypt/ssl-dhparams.pem;
 }
