--- a/.env
+++ b/.env
@@ -5,8 +5,7 @@ APACHE_HOST_HTTP_PORT=8080
 APACHE_HOST_HTTPS_PORT=4433
 APACHE_HOST_LOG_PATH=./log/apache
 APACHE_CONF_PATH=./conf/apache
-APACHE_WWW_PATH=./www/f3cms
-APACHE_PMA_PATH=./www/pma
+APACHE_WWW_PATH=./www
 
 
 ### php ######
